make-a-wish-salesforce/src/objects/How_To__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wish Granter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker&apos;s Bureau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celebrity Host</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Volunteers</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Step_By_Step__c</fullName>
        <label>Step-By-Step</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>How-To</label>
    <pluralLabel>How-Tos</pluralLabel>
</CustomObject>